--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         </form>
         <nav>
           <div class="navbar-wrapper">
-            <a href="#" class="navbar-favorite-link">
+            <a href="favorites.html" class="navbar-favorite-link">
               <span class="shopping-number">1</span>
               <img src="Images/like-header-logo.svg" alt="a heart shaped like">
               <p>Избранное</p>
             </a>
-            <a href="#" class="navbar-products-link">
+            <a href="products.html" class="navbar-products-link">
               <img src="Images/product-header-logo.svg" alt="a box">
               <p>продукты</p>
             </a>
-            <a href="#" class="navbar-cart-link">
+            <a href="cart.html" class="navbar-cart-link">
               <span class="shopping-number">1</span>
               <img src="Images/shopping-cart.svg" alt="a shopping vehicle">
               <p>Корзина</p>
@@ -207,7 +207,7 @@
         <div class="articles-wrapper">
           <div class="articles-top">
             <h2 class="articles-heading">Статьи</h2>
-            <a href="./goods.html" class="articles-top__link">Все продукты
+            <a href="products.html" class="articles-top__link">Все продукты
               <img src="./images/chevron-right.svg" alt="an img">
             </a>
           </div>
@@ -230,11 +230,11 @@
           </div>
           <div class="footer-nav">
             <ul>
-              <li><a href="./about.html">О компании </a></li>
-              <li><a href="./contact.html">Контакты</a></li>
-              <li><a href="./vacancy.html">Вакансии</a></li>
-              <li><a href="./favorites.html">Статьи</a></li>
-              <li><a href="./category.html">Политика обработки персональных данных</a></li>
+              <li><a href="about.html">О компании </a></li>
+              <li><a href="contact.html">Контакты</a></li>
+              <li><a href="vacancy.html">Вакансии</a></li>
+              <li><a href="favorites.html">Статьи</a></li>
+              <li><a href="category.html">Политика обработки персональных данных</a></li>
             </ul>
           </div>
           <div class="footer-social">
@@ -307,3 +307,4 @@
 </body>
 
 </html>
+
