--- a/category.html
+++ b/category.html
@@ -16,7 +16,6 @@
           <img class="header-logo-img" src="Images/main-logo.png" alt="a logo">
           <img class="header-res-logo" src="Images/header-res-logo.png" alt="an img">
         </a>
-        
         <div class="header-category-link-div">
           <button class="header-category-dropdown">
             <img src="Images/menu.svg" alt="a hamburger menu">
@@ -29,16 +28,16 @@
         </form>
         <nav>
           <div class="navbar-wrapper">
-            <a href="#" class="navbar-favorite-link">
+            <a href="favorites.html" class="navbar-favorite-link">
               <span class="shopping-number">1</span>
               <img src="Images/like-header-logo.svg" alt="a heart shaped like">
               <p>Избранное</p>
             </a>
-            <a href="#" class="navbar-products-link">
+            <a href="products.html" class="navbar-products-link">
               <img src="Images/product-header-logo.svg" alt="a box">
               <p>продукты</p>
             </a>
-            <a href="#" class="navbar-cart-link">
+            <a href="cart.html" class="navbar-cart-link">
               <span class="shopping-number">1</span>
               <img src="Images/shopping-cart.svg" alt="a shopping vehicle">
               <p>Корзина</p>
@@ -53,6 +52,43 @@
       </div>
     </div>
   </header>
+
+  <main>
+
+    <!-- category hero -->
+
+    <section class="category-hero">
+      <div class="container">
+        <div class="category-hero__top">
+          <a href="index.html">Главная</a>
+          <img src="Images/chevron-right.svg" alt="an img">
+          <a href="categorii.html">Каталог</a>
+          <img src="Images/chevron-right.svg" alt="an img">
+          <a href="category.html">Молоко, сыр, яйцо</a>
+        </div>
+        <h1 class="category-hero__title">
+          
+        </h1>
+        <div class="category-hero__content">
+          <div class="c-h-c-left">
+            <p class="c-h-c-left__filter">Фильтр</p>
+            <div class="c-h-c-left__filter__control">
+              <p>Цена</p>
+              <button>Очистить</button>
+            </div>
+            <form action="#">
+              <input class="category-firstinput" type="text" value="1">
+              <input class="category-secondinput" type="text" value="100">
+            </form>
+            <img src="Images/category-filter-line.png" alt="a green shaped filtering thing">
+          </div>
+          <div class="c-h-c-right">
+            <div class="c-h-c-right__row"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 
   <!-- footer -->
@@ -135,6 +171,8 @@
   </button>
 
 
+  <script src="js/categories-data.js"></script>
+  <script src="js/products-data.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
