the categories mapped based on the click occurs in header category list

--- a/category.html
+++ b/category.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-commerce | Category</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
   <!-- HEADER -->
-  
+
   <header class="header">
     <div class="container">
       <div class="header-wrapper">
@@ -67,7 +69,7 @@
           <a href="category.html">Молоко, сыр, яйцо</a>
         </div>
         <h1 class="category-hero__title">
-          
+
         </h1>
         <div class="category-hero__content">
           <div class="c-h-c-left">
@@ -92,7 +94,7 @@
 
 
   <!-- footer -->
-  
+
   <footer class="footer">
     <div class="container">
       <div class="footer-wrapper">
@@ -129,21 +131,21 @@
       </div>
     </div>
   </footer>
-  
+
   <!-- category dropdown -->
-  
+
   <div class="header-category-dropdown-content">
     <div class="container">
       <div class="header-category-dropdown-content-row">
-  
+
       </div>
     </div>
   </div>
-  
+
   <!-- responsive navbar at the bottom -->
   <div class="header-responsive-navbar">
     <div class="navbar-wrapper">
-  
+
       <a href="#" class="res-category-menu">
         <button class="res-c-d-d-o"><img src="Images/reshamburger.png" alt="a menu"></button>
         <p>Каталог</p>
@@ -162,7 +164,7 @@
         <img src="Images/shopping-cart.svg" alt="a shopping vehicle">
         <p>Корзина</p>
       </a>
-  
+
     </div>
   </div>
   <!-- tap to see navbe in responsive -->
@@ -174,5 +176,8 @@
   <script src="js/categories-data.js"></script>
   <script src="js/products-data.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/home.js"></script>
+  <script src="js/category.js"></script>
 </body>
+
 </html>
