--- a/categorii.html
+++ b/categorii.html
@@ -30,7 +30,7 @@
         <nav>
           <div class="navbar-wrapper">
             <a href="favorites.html" class="navbar-favorite-link">
-              <span class="shopping-number">1</span>
+              <span class="liked-number">1</span>
               <img src="Images/like-header-logo.svg" alt="a heart shaped like">
               <p>Избранное</p>
             </a>
