--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <nav>
           <div class="navbar-wrapper">
             <a href="favorites.html" class="navbar-favorite-link">
-              <span class="shopping-number">1</span>
+              <span class="liked-number">1</span>
               <img src="Images/like-header-logo.svg" alt="a heart shaped like">
               <p>Избранное</p>
             </a>
@@ -41,7 +41,7 @@
               <p>продукты</p>
             </a>
             <a href="cart.html" class="navbar-cart-link">
-              <span class="shopping-number">1</span>
+              <span class="shopping-number"></span>
               <img src="Images/shopping-cart.svg" alt="a shopping vehicle">
               <p>Корзина</p>
             </a>
@@ -302,8 +302,8 @@
   <!-- js files -->
   <script src="js/categories-data.js"></script>
   <script src="js/products-data.js"></script>
-  <script src="js/home.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/home.js"></script>
 </body>
 
 </html>
