--- a/helpers/html/helpers.html
+++ b/helpers/html/helpers.html
@@ -78,3 +78,50 @@
     </div>
   </div>
 </header>
+
+<!-- the card of korinka-->
+
+<div class="korzinka-hero__main-content__card">
+  <img src="Images/korzinka-pr-img.png" alt="an img">
+  <div class="k-h-m-c-c-textual">
+    <h5>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h5>
+    <div>
+      <p>44,50 ₽</p>
+      <span>discount</span>
+    </div>
+  </div>
+  <div class="k-h-m-c-c-btns">
+    <button class="k-h-m-c-c-btns-decrease">-</button>
+    <p>3</p>
+    <button class="k-h-m-c-c-btns-increase">+</button>
+  </div>
+  <p class="k-h-m-c-c-price"> 89,00 ₽</p>
+</div>
+
+<!-- price bar korzinka-->
+
+<div class="korzinka-hero__main-prices-bar">
+  <div class="k-h__m-c-p1">
+    <div>
+      <input type="checkbox">
+      Списать 200 ₽
+    </div>
+    <p>На карте накоплено 200 ₽</p>
+  </div>
+  <div class="k-h__m-c-p2">
+    <div>
+      <div><span class="all-product-total-count">3</span> <a> товара</a></div>
+      <p>258,10 ₽</p>
+    </div>
+    <span>
+      <p>Скидка</p>
+      <p>-8,01 ₽</p>
+    </span>
+  </div>
+  <div class="k-h__m-c-p3">
+    <p>Итог</p> <span class="all-product-price">250,09 ₽</span>
+  </div>
+  <div class="k-h__m-c-p4">
+    <button>Оформить заказ</button>
+  </div>
+</div>
