--- a/product.html
+++ b/product.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-commerce</title>
+  <title>E-commerce | Product</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
-
 <body>
 
   <!-- HEADER -->
@@ -51,7 +49,7 @@
           <img src="Images/header-sign-avatar.svg" alt="a persons avatar probably named Aleksey">
           <button class="sign-in-btn">Алексей</button>
           <img src="Images/chevron-down.svg" alt="chevron down or an arrow showing the bottom">
-
+  
           <div class="header-sign-in-modal">
             <form action="#" id="header-s-i-form">
               <h2>Sign In</h2>
@@ -82,142 +80,74 @@
   </header>
 
   <main>
-
-    <!-- HERO -->
-
-    <section class="hero">
+    <!-- product hero -->
+    <section class="pro-hero">
       <div class="container">
-        <div class="hero-wrapper">
-          <div class="hero-basket">
-            <img src="Images/hero-basket-image.png" alt="some foods">
+        <div class="pro-hero-wrapper">
+          <div class="pro-hero-top">
+            <p>Главная</p>
+            <img src="Images/chevron-right.png" alt="an img">
+            <p>Каталог</p>
+            <img src="Images/chevron-right.png" alt="an img">
+            <p>Молоко, сыр, яйцо</p>
+            <img src="Images/chevron-right.png" alt="an img">
+            <span>Масло ПРОСТОКВАШИНО сливочное в/с 82% фольга без змж, Россия, 180 г</span>
           </div>
-          <h1 class="hero-heading">Доставка бесплатно от 1000 ₽</h1>
-        </div>
-      </div>
-    </section>
-
-    <!-- Aksii -->
-
-    <section class="aksii">
-      <div class="container">
-        <div class="aksii-wrapper">
-          <div class="aksii-top">
-            <h2 class="aksii-heading">Акции</h2>
-            <a href="#">
-              Все продукты
-              <img src="Images/chevron-right.svg" alt="an arrow showing the right side">
-            </a>
-          </div>
-          <div class="aksii-bottom">
-            <div class="aksii-content-row">
-
+          <div class="pro-hero-middle">
+            <h1>Масло ПРОСТОКВАШИНО сливочное в/с 82% фольга без змж, Россия, 180 г</h1>
+            <div>
+              <p>арт. 371431</p>
+              <span class="pro-middle-span1">
+                <img src="Images/rating-full.svg" alt="an img">
+                <img src="Images/rating-full.svg" alt="an img">
+                <img src="Images/rating-empty.svg" alt="an img">
+                <img src="Images/rating-empty.svg" alt="an img">
+                <img src="Images/rating-empty.svg" alt="an img">
+                <a href="#">3 отзыва</a>
+              </span>
+              <span class="pro-middle-span2">
+                <img src="Images/share-2.svg" alt="an img">
+                <p>Поделиться</p>
+              </span>
+              <span class="pro-middle-span3">
+                <img src="Images/heartpro.svg" alt="an img">
+                <p>Поделиться</p>
+              </span>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Novinki -->
-
-    <section class="novinki">
-      <div class="container">
-        <div class="novinki-wrapper">
-          <div class="novinki-top">
-            <h2 class="novinki-heading">Новинки</h2>
-            <a href="#">
-              Все продукты
-              <img src="Images/chevron-right.svg" alt="an arrow showing the right side">
-            </a>
-          </div>
-          <div class="novinki-bottom">
-            <div class="novinki-content-row">
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- popular -->
-
-    <section class="popular">
-      <div class="container">
-        <div class="popular-wrapper">
-          <div class="popular-top">
-            <h2 class="popular-heading">Покупали раньше</h2>
-            <a href="#">
-              Все продукты
-              <img src="Images/chevron-right.svg" alt="an arrow showing the right side">
-            </a>
-          </div>
-          <div class="popular-bottom">
-            <div class="popular-content-row">
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- special -->
-
-    <section class="special">
-      <div class="container">
-        <div class="special-wrapper">
-          <div class="special-top">
-            <h2>Специальные предложения</h2>
-          </div>
-          <div class="special-bottom">
-            <div class="special-bottom-row">
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <!-- magazine -->
-
-    <section class="magazine">
-      <div class="container">
-        <div class="magazine-wrapper">
-          <div class="magazine-top">
-            <h2 class="magazine-title">
-              Наши магазины
-            </h2>
-          </div>
-          <div class="magazine-ap-tab">
-            <div class="magazine-ap-tab-btns">
-              <button class="m-a-p-btn">п.Щельяюр</button>
-              <button class="m-a-p-btn">д.Вертеп</button>
-              <button class="m-a-p-btn">с.Краснобор</button>
-              <button class="m-a-p-btn">д.Диюр</button>
-            </div>
-            <div class="magazine-ap-tab-contents">
-              <div class="magazine-ap-tab-content">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387194.0735703367!2d-74.31001043286854!3d40.697017342417176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1691401968551!5m2!1sen!2s"
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div class="pro-hero-bottom">
+            <div class="pro-hero-bottom-left">
+              <div class="images-pro">
+                
               </div>
-              <div class="magazine-ap-tab-content">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d158858.58687275244!2d-0.266747665043916!3d51.528525720591915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2s!4v1691402008611!5m2!1sen!2s"
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <img class="pro-hero-bottom-left-mainimg"  alt="">
+              <span class="pro-img-discount"></span>
+            </div>
+            <div class="pro-hero-bottom-right">
+              <div class="p2-h-b-r-top">
+                
               </div>
-              <div class="magazine-ap-tab-content">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d424143.8848837937!2d150.60163958359047!3d-33.847803438451024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b129838f39a743f%3A0x3017d681632a850!2sSydney%20NSW%2C%20Australia!5e0!3m2!1sen!2s!4v1691402040495!5m2!1sen!2s"
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="p2-h-b-r-middle">
+                <a href="cart.html">
+                  <img src="Images/shopping-cart.svg" alt="an img">
+                  <p>В корзину</p>
+                </a>
               </div>
-              <div class="magazine-ap-tab-content">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1663022.5755381389!2d138.44778832125957!3d35.5020288120362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x605d1b87f02e57e7%3A0x2e01618b22571b89!2sTokyo%2C%20Japan!5e0!3m2!1sen!2s!4v1691402056763!5m2!1sen!2s"
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="p2-h-b-r-bottom">
+                <div class="g-h-c-l-table">
+                  <span class="g-h-c-l-table-s1">
+                    <p>Бренд</p>
+                    <p>ПРОСТОКВАШИНО</p>
+                  </span>
+                  <span class="g-h-c-l-table-s2">
+                    <p>Страна производителя</p>
+                    <p>Россия</p>
+                  </span>
+                  <span class="g-h-c-l-table-s3">
+                    <p>Упаковка</p>
+                    <p>180 г</p>
+                  </span>
+                </div>
               </div>
             </div>
           </div>
@@ -225,27 +155,21 @@
       </div>
     </section>
 
-    <!-- articles -->
+    <!-- pro relatives -->
 
-    <section class="articles">
+    <section class="pro-relatives">
       <div class="container">
-        <div class="articles-wrapper">
-          <div class="articles-top">
-            <h2 class="articles-heading">Статьи</h2>
-            <a href="products.html" class="articles-top__link">Все продукты
-              <img src="./images/chevron-right.svg" alt="an img">
-            </a>
-          </div>
-          <div class="articles-bottom">
+        <h2>С этим товаров мокупают</h2>
+        <div class="pro-relatives-wrapper">
 
-          </div>
         </div>
       </div>
     </section>
   </main>
 
-  <!-- footer -->
 
+  <!-- footer -->
+  
   <footer class="footer">
     <div class="container">
       <div class="footer-wrapper">
@@ -282,21 +206,21 @@
       </div>
     </div>
   </footer>
-
+  
   <!-- category dropdown -->
-
+  
   <div class="header-category-dropdown-content">
     <div class="container">
       <div class="header-category-dropdown-content-row">
-
+  
       </div>
     </div>
   </div>
-
+  
   <!-- responsive navbar at the bottom -->
   <div class="header-responsive-navbar">
     <div class="navbar-wrapper">
-
+  
       <a href="#" class="res-category-menu">
         <button class="res-c-d-d-o"><img src="Images/reshamburger.png" alt="a menu"></button>
         <p>Каталог</p>
@@ -315,7 +239,7 @@
         <img src="Images/shopping-cart.svg" alt="a shopping vehicle">
         <p>Корзина</p>
       </a>
-
+  
     </div>
   </div>
   <!-- tap to see navbe in responsive -->
@@ -323,13 +247,10 @@
     See Navbar
   </button>
 
-
-  <!-- js files -->
-  <script src="js/categories-data.js"></script>
   <script src="js/products-data.js"></script>
+  <script src="js/categories-data.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/home.js"></script>
+  <!-- <script src="js/home.js"></script> -->
+  <script src="js/product.js"></script>
 </body>
-
 </html>
-
