--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
         </button>
         <a href="categorii.html">Каталог</a>
       </div>
-      <form action="#">
+      <form id="header-s-form" action="#">
         <input type="search" placeholder="Найти товар">
         <img src="Images/search.svg" alt="a search icon">
       </form>
@@ -40,7 +40,7 @@
             <p>продукты</p>
           </a>
           <a href="cart.html" class="navbar-cart-link">
-            <span class="shopping-number">1</span>
+            <span class="shopping-number"></span>
             <img src="Images/shopping-cart.svg" alt="a shopping vehicle">
             <p>Корзина</p>
           </a>
@@ -50,6 +50,31 @@
         <img src="Images/header-sign-avatar.svg" alt="a persons avatar probably named Aleksey">
         <button class="sign-in-btn">Алексей</button>
         <img src="Images/chevron-down.svg" alt="chevron down or an arrow showing the bottom">
+
+        <div class="header-sign-in-modal">
+          <form action="#" id="header-s-i-form">
+            <h2>Sign In</h2>
+            <div class="header-sign-in-modal-wrapper">
+              <div class="sign-in-modal-input-group1 sign-in-modal-input-group">
+                <label for="header-sign-in-modal-name-input">Enter your name</label>
+                <input id="header-sign-in-modal-name-input" type="text">
+                <p></p>
+              </div>
+              <div class="sign-in-modal-input-group2 sign-in-modal-input-group">
+                <label for="header-sign-in-modal-surname-input">Enter your name</label>
+                <input id="header-sign-in-modal-surname-input" type="text">
+                <p></p>
+              </div>
+              <div class="sign-in-modal-input-group3 sign-in-modal-input-group">
+                <label for="header-sign-in-modal-tel-input">Enter your name</label>
+                <input id="header-sign-in-modal-tel-input" type="tel">
+                <p></p>
+              </div>
+              <button class="header-sign-in-modal-submit-button" type="submit">Submit</button>
+            </div>
+            <button class="header-sign-in-modal-closer-btn"><img src="Images/x.png" alt="close img"></button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
